# jointer

./: .flake8  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  noxfile.py  pyproject.toml  small_test.bash
.github/workflows/: CI.yml
data/readme_examples/bedtools_examples/: bedtools_make_merged_max_outer.sh  bedtools_make_merged_sum_inner.sh  merged_max_outer.bed  merged_sum_inner_bedtools_awk.bed  source_a.bed  source_b.bed
data/readme_examples/country_code_examples/: country_codes.tsv  country_codes_col_reorder.tsv  country_populations.tsv  join_pop_codes.sh  join_pop_codes_col_reorder.sh
data/readme_examples/hours_logged_examples/: application_A.tsv  application_B.tsv  make_hours_logged_sum_awk.bash  make_hours_logged_sum_join.bash
python/counts_merging/: __init__.py  cli.py  py_merge.py  py_utils.py
python/jointer/: __init__.py  cli.py  jointer.py
src/: count_file.rs  lib.rs  main.rs
test/: make_large_tsvs.py  test_country_join.py
tests/: test_pymerge.py
