[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "counts_merging"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "click >= 8.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "counts_merging.rust_utils"

[project.scripts]
merge-counts = "counts_merging.cli:merge_counts"
